# envelo

./: .env.example  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml
docs/: architecture.md  erd.md  migrations.md
frontend/: Dockerfile  README.md  pyproject.toml
frontend/src/: api_client.py  asgi.py  config.py  main.py  routing.py
frontend/src/views/: accounts.py  home.py
frontend/tests/: test_api_client.py  test_main.py  test_routing.py
infra/postgres/init/: 01_create_schemas.sql  02_create_tables.sql
infra/postgres/seed/: seed_data.sql
services/api-gateway/: alembic.ini  requirements.txt
services/api-gateway/app/: main.py
services/api-gateway/app/core/: config.py  logging.py
services/api-gateway/app/db/: repositories.py  session.py
services/api-gateway/app/schemas/: __init__.py  account.py  categorization_rule.py  category_group.py  envelope.py  envelope_allocation.py  payee.py  statement.py  transaction.py
services/api-gateway/app/services/: csv_column_mappings.py  csv_parser.py  parsed_transaction.py  statement_import.py
services/api-gateway/migrations/: env.py
services/api-gateway/migrations/versions/: 67d3fa7eb3fe_add_categorization_rules_table.py  7ed2c67e5a11_add_upload_status_storage_fields_to_.py  a86741af29f4_initial_budget_and_transactions_schema_.py
services/api-gateway/tests/: conftest.py  test_accounts.py  test_categorization_rules.py  test_category_groups.py  test_csv_parser.py  test_envelope_allocations.py  test_envelopes.py  test_payees.py  test_statements.py  test_transactions.py
(+16 files in other folders)
