[project]
name = "frontend"
version = "0.1.0"
description = "Envelo Flet frontend - web + mobile from one codebase"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flet>=0.86.2",
    # Pinned explicitly rather than left in the dev group: export_asgi_app=True
    # (used by src/asgi.py for the Docker/uvicorn entrypoint) requires this
    # package and otherwise auto-installs it at runtime, which we don't want
    # happening inside a container.
    "flet-web>=0.86.2",
    # Used directly by api_client.py; already a transitive flet dependency,
    # but declared explicitly since we import it ourselves.
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "flet-cli>=0.86.2",
    "flet-desktop>=0.86.2",
    # Integration testing with `flet test` / pytest. The `test` extra brings in
    # pytest, pytest-asyncio and the screenshot-comparison dependencies.
    "flet[test]>=0.86.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.flet]
org = "dev.envelo"
product = "Envelo"
company = "Envelo"

[tool.flet.app]
path = "src"
